--- a/o/opkg/package.xml
+++ b/o/opkg/package.xml
@@ -22,7 +22,7 @@
             <file src="opkg-0.4.2~0.tar.gz" subdir="sources"
                 sha256sum="9b217b708778d10cebbc293407428903039e253b4ef5c544b72a538215f854a3"/>
             <file src="bolt-patches-1.tar.gz" subdir="patches"
-                sha256sum="0b1d57183cb93e03a8e2a4953e9360fa57cc548f94132778e33de7617fdca645"/>
+                sha256sum="34cce47ad1548c010ded7a090cbf264b85cd9bd052229267231bfb197cccf54d"/>
         </sources>
 
         <patches>
@@ -31,6 +31,7 @@
                 <file src="patches/sha256sum-debian-compatible.patch"/>
                 <file src="patches/force-deps-removal.patch"/>
                 <file src="patches/archive-warn-debug.patch"/>
+                <file src="patches/prevent-multi-remove.patch"/>
             </patchset>
         </patches>
 
