misc: depend on abstract libc-dev instead of musl-libc-dev

--- a/b/busybox/package.xml
+++ b/b/busybox/package.xml
@@ -46,7 +46,7 @@
         </patches>
 
         <requires>
-            <package name="musl-libc-dev"/>
+            <package name="libc-dev"/>
         </requires>
 
         <xi:include href="rules.xml"/>
