musl-fts build-depends on musl-libc-dev

--- a/m/musl-fts/package.xml
+++ b/m/musl-fts/package.xml
@@ -23,7 +23,7 @@
         </sources>
 
         <requires>
-            <package name="libc6-dev"/>
+            <package name="musl-libc-dev"/>
         </requires>
 
         <xi:include href="rules.xml"/>
