--- a/f/flex/package.xml
+++ b/f/flex/package.xml
@@ -34,6 +34,7 @@
         </patches>
 
         <requires>
+            <package name="autopoint"/>
             <package name="bison"/>
             <package name="gettext"/>
             <package name="texinfo"/>
