busybox build depends on libselinux1-dev, libsepol1-dev, libpam0g-dev

--- a/b/busybox/package.xml
+++ b/b/busybox/package.xml
@@ -46,7 +46,9 @@
         </patches>
 
         <requires>
-            <package name="libc-dev"/>
+            <package name="libselinux1-dev"/>
+            <package name="libsepol1-dev"/>
+            <package name="libpam0g-dev"/>
         </requires>
 
         <xi:include href="rules.xml"/>
