autoconf: fix build deps

--- a/a/autoconf/package.xml
+++ b/a/autoconf/package.xml
@@ -39,6 +39,9 @@
         </patches>
 
         <requires>
+            <package name="perl"/>
+            <package name="m4"/>
+            <package name="texinfo"/>
         </requires>
 
         <xi:include href="rules.xml"/>
