autoconf2.64: fix build deps

--- a/a/autoconf2.64/package.xml
+++ b/a/autoconf2.64/package.xml
@@ -23,6 +23,12 @@
             </patchset>
         </patches>
 
+        <requires>
+            <package name="perl"/>
+            <package name="m4"/>
+            <package name="texinfo"/>
+        </requires>
+
         <xi:include href="rules.xml"/>
     </source>
 
