automake-1.15: fix build deps

--- a/a/automake-1.15/package.xml
+++ b/a/automake-1.15/package.xml
@@ -39,6 +39,10 @@
             </patchset>
         </patches>
 
+        <requires>
+            <package name="help2man"/>
+        </requires>
+
         <xi:include href="rules.xml"/>
     </source>
 
