python-py: simplify build deps

--- a/p/python-py/package.xml
+++ b/p/python-py/package.xml
@@ -22,8 +22,8 @@
         </sources>
 
         <requires>
-            <package name="python-all" version=">= 2.6.6-3~"/>
-            <package name="python3-all" version=">= 3.1.2-6~"/>
+            <package name="python-all"/>
+            <package name="python3-all"/>
             <package name="python-setuptools"/>
             <package name="python3-setuptools"/>
         </requires>
