--- a/p/python3.7/package.xml
+++ b/p/python3.7/package.xml
@@ -74,18 +74,17 @@
         <requires>
             <package name="autoconf"/>
             <package name="libreadline-dev"/>
-            <package name="libncursesw5-dev" version=">= 5.3"/>
-            <package name="gcc" version=">= 4:6.3"/>
+            <package name="libncursesw5-dev"/>
             <package name="zlib1g-dev"/>
             <package name="libbz2-dev"/>
             <package name="liblzma-dev"/>
             <package name="libgdbm-dev"/>
-            <package name="libdb-dev"/>
+            <package name="libdb5.3-dev"/>
             <package name="libssl-dev"/>
             <package name="libexpat1-dev"/>
-            <package name="libmpdec-dev" version=">= 2.4"/>
+            <package name="libmpdec-dev"/>
             <package name="libsqlite3-dev"/>
-            <package name="libffi-dev" version=">= 3.0.5"/>
+            <package name="libffi-dev"/>
             <package name="bzip2"/>
             <package name="python3"/>
         </requires>
