--- a/t/libtool/package.xml
+++ b/t/libtool/package.xml
@@ -51,15 +51,15 @@
                 <file src="patches/0025-libtool-pass-use-ld.patch"/>
             </patchset>
         </patches>
+
         <requires>
             <package name="file"/>
-            <package name="automake" version=">= 1:1.14.1-3"/>
-            <package name="autoconf" version=">= 2.69-7"/>
+            <package name="automake"/>
+            <package name="autoconf"/>
             <package name="autotools-dev"/>
             <package name="help2man"/>
             <package name="texinfo"/>
             <package name="zlib1g-dev"/>
-            <package name="gnulib"/>
         </requires>
 
         <xi:include href="rules.xml"/>
