--- a/x/libxml2/package.xml
+++ b/x/libxml2/package.xml
@@ -51,11 +51,8 @@
         <requires>
             <package name="autotools-dev"/>
             <package name="pkg-config"/>
-            <package name="libpython-all-dev"/>
-            <package name="libpython-all-dbg"/>
-            <package name="python-all-dev" version=">= 2.7.5-5~"/>
-            <package name="libpython3-all-dev"/>
-            <package name="python3-all-dev" version=">= 3.5"/>
+            <package name="python2-dev"/>
+            <package name="python3-dev"/>
             <package name="zlib1g-dev"/>
             <package name="liblzma-dev"/>
             <package name="libicu-dev"/>
