libevent: fix build deps

--- a/e/libevent/package.xml
+++ b/e/libevent/package.xml
@@ -31,6 +31,7 @@
         </patches>
 
         <requires>
+            <package name="automake-1.15"/>
             <package name="autotools-dev"/>
             <package name="libssl-dev"/>
         </requires>
