guile: fix build deps

--- a/g/guile-2.0/package.xml
+++ b/g/guile-2.0/package.xml
@@ -38,7 +38,7 @@
             <package name="autoconf"/>
             <package name="automake"/>
             <package name="libncurses5-dev"/>
-            <package name="libreadline6-dev"/>
+            <package name="libreadline-dev"/>
             <package name="libltdl-dev"/>
             <package name="libgmp-dev"/>
             <package name="texinfo"/>
