--- a/u/unbound/package.xml
+++ b/u/unbound/package.xml
@@ -33,10 +33,8 @@
             <package name="nettle-dev"/>
             <package name="pkg-config"/>
             <package name="protobuf-c-compiler"/>
-            <package name="python-all-dev"/>
-            <package name="libpython-all-dev"/>
-            <package name="python3-all-dev"/>
-            <package name="libpython3-all-dev"/>
+            <package name="python2-dev"/>
+            <package name="python3-dev"/>
             <package name="swig"/>
         </requires>
 
