--- a/t/tcllib/package.xml
+++ b/t/tcllib/package.xml
@@ -26,6 +26,10 @@
             </patchset>
         </patches>
 
+        <requires>
+            <package name="tcl"/>
+        </requires>
+
         <xi:include href="rules.xml"/>
     </source>
 
