flex: build-deps flex

--- a/f/flex/package.xml
+++ b/f/flex/package.xml
@@ -36,6 +36,7 @@
         <requires>
             <package name="autopoint"/>
             <package name="bison"/>
+            <package name="flex"/>
             <package name="gettext"/>
             <package name="texinfo"/>
             <package name="help2man"/>
