--- a/r/ruby2.5/package.xml
+++ b/r/ruby2.5/package.xml
@@ -61,7 +61,7 @@
             <package name="libssl-dev"/>
             <package name="libyaml-dev"/>
             <package name="openssl"/>
-            <package name="ruby2.5" target-prefix="tools-"/>
+            <package name="ruby2.5"/>
             <package name="tzdata"/>
             <package name="zlib1g-dev"/>
         </requires>
