ruby2.5: apply libpath-env-always-empty.diff

--- a/r/ruby2.5/package.xml
+++ b/r/ruby2.5/package.xml
@@ -46,6 +46,8 @@
                 <file src="patches/020-make-relocation-time-symbol-lookup-and-dlsym-consistent.patch"/>
                 <!-- Alpine -->
                 <file src="patches/021-ruby-get-main-stack.diff"/>
+                <!-- Bolt -->
+                <file src="patches/libpath-env-always-empty.diff"/>
             </patchset>
         </patches>
 
