--- a/core/b/bolt-package/package.xml
+++ b/core/b/bolt-package/package.xml
@@ -11,7 +11,7 @@
             The Bolt OS Package Generator turns a set of source archives and
             patches into ready-to-install binary packages. Rules for compilation
             of sources, package contents and a simple changelog are kept in an
-            XML spec format resembling Debian package rules.
+            XML spec format remotely resembling Debian's source package format.
             </p>
         </description>
 
@@ -19,7 +19,7 @@
 
         <sources>
             <file src="bolt-package-1.1.0.tar.gz" subdir="sources"
-                sha256sum="230e8db404c279597f68fd17aaa82791f9873005a594cfac5cc7a822c3b0330f"/>
+                sha256sum="566e7a9dcadc80d0ec581d28af966902e7aa75567e0a3e3dfbcd95c2d316dfd2"/>
         </sources>
 
         <requires>
