flex: patch adding declarations for rpl_malloc/realloc

--- a/core/f/flex/package.xml
+++ b/core/f/flex/package.xml
@@ -26,12 +26,16 @@
                 sha256sum="e87aae032bf07c26f85ac0ed3250998c37621d95f8bd748b31f15b33c45ee995"/>
             <file src="flex-2.6.4-6.2.debdiff.gz" subdir="patches"
                 sha256sum="7853e12f05d41b401b73077411f01b21c9d15f8b6a2ea69c94e40c9b63401460"/>
+            <file src="bolt-patches-1.tar.gz" subdir="patches"
+                sha256sum="feda52f423a783a67e39ad6f3875c2f72f990d0140b7e4bfe11c7f15bd405f73"/>
         </sources>
 
         <patches>
             <patchset subdir="sources">
                 <!-- Debian -->
                 <file src="patches/flex-2.6.4-6.2.debdiff"/>
+                <!-- Upstream -->
+                <file src="patches/rpl-malloc-realloc-decl.diff"/>
             </patchset>
         </patches>
 
